refactor: JUnit 4 to AssertJ & resolve Sonar issues and code warnings (#529)
This change refactors test classes to use AssertJ instead of JUnit 4.

The initial change has been performed with OpenRewrite. Afterwards the changed test classes have been cleaned up from Sonar findings and other warnings that the IDE reveiled.

JUnit assertions to AssertJ
- assertEquals(XXX,YYY) -> assertThat(XXX).isEqualTo(YYY)
- assertNotNull(XXX) -> assertThat(XXX).isNotNull()
- assertNull(XXX) -> assertThat(XXX).isNull()
- assertTrue(XXX)-> assertThat(XXX).isTrue()
- assertFalse(XXX)-> assertThat(XXX).isFalse()
- assertTrue(XXX.contains(YYY)) -> assertThat(XXX).contains(YYY)
- assertArrayEquals(XXX, YYY) -> assertThat(XXX).containsExactly(YYY)`

Cleanups
- remove unnecessary throws declarations
- suppress warnings where appropriate
- fix typos